--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["env", "stage-0"]
+  "presets": [
+    "@babel/preset-flow",
+    ["@babel/preset-env",
+      { 
+        "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ]
 }
