--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diff-sergye",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "CLI diff tool",
   "main": "index.js",
   "bin": {
@@ -10,7 +10,7 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "babel-node": "babel-node",
     "eslint": "eslint",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
@@ -20,29 +20,34 @@
     "type": "git",
     "url": "git+https://github.com/sergye/project-lvl2-s365.git"
   },
-  "keywords": [
-    "diff",
-    "gendiff",
-    "sergye"
-  ],
-  "author": "\"Serhii Doroshenko <sergye@gmail.com>",
+  "author": "Serhii Doroshenko <sergye@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sergye/project-lvl2-s365/issues"
   },
   "homepage": "https://github.com/sergye/project-lvl2-s365#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-flow": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.0.0",
+    "flow-bin": "^0.86.0",
+    "flow-typed": "^2.5.1",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0"
   },
   "dependencies": {
-    "commander": "^2.19.0"
+    "commander": "^2.19.0",
+    "lodash": "^4.17.11"
   }
 }
