--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diff-sergye",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "CLI diff tool",
   "main": "index.js",
   "bin": {
@@ -32,7 +32,7 @@
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-flow": "^7.0.0",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.9.0",
