--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diff-sergye",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "CLI diff tool",
   "main": "index.js",
   "bin": {
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
     "babel-node": "babel-node",
     "eslint": "eslint",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
@@ -34,6 +35,7 @@
     "@babel/preset-flow": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -44,7 +46,8 @@
     "flow-bin": "^0.86.0",
     "flow-typed": "^2.5.1",
     "jest": "^23.6.0",
-    "jest-cli": "^23.6.0"
+    "jest-cli": "^23.6.0",
+    "regenerator-runtime": "^0.13.1"
   },
   "dependencies": {
     "commander": "^2.19.0",
