--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diff-sergye",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "CLI diff tool",
   "main": "index.js",
   "bin": {
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "commander": "^2.19.0",
+    "js-yaml": "^3.12.0",
     "lodash": "^4.17.11"
   }
 }
